prodMetadata/src/objects/Budget_Request__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Spend__c</fullName>
        <label>Actual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Budget__c</fullName>
        <label>Approved Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>IAVAEvent__c</referenceTo>
        <relationshipLabel>Budget Requests</relationshipLabel>
        <relationshipName>Budget_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requested_Budget__c</fullName>
        <label>Requested Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved for Requested Amount</fullName>
                </value>
                <value>
                    <fullName>Approved with New Amount</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Budget Request</label>
    <nameField>
        <displayFormat>BR-{0}</displayFormat>
        <label>Budget Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>OnlyCertainUsersCanApproveBudgetRequest</fullName>
        <active>true</active>
        <description>allow only users who can enter an approved budget to change the status to approved.</description>
        <errorConditionFormula>ISBLANK(Approved_Budget__c) &amp;&amp;
CONTAINS(TEXT(Status__c),&quot;Approved&quot;)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>You must enter an Approved Budget when approving a budget request. If you do not have access to the Approved Budget field, you cannot approve a budget request.</errorMessage>
    </validationRules>
</CustomObject>